--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Calculator</title>
   <style>
     /* Styles CSS */
-    .calculator {
+    /* .calculator {
       width: 300px;
       margin: 50px auto;
       padding: 20px;
       border: 1px solid #ccc;
       border-radius: 5px;
       text-align: center;
-    }
+    } */
 
     #display {
       width: 100%;
